# ArgonEngine

./: .gitignore  CMakeLists.txt  compile_commands.json  flake.nix  generate_waylandProtocolGenerator.py  out.txt  tmp.py
app/: ArgonAppFlowControl.h  DevConsole.h  main.cpp
common/: config.h
common/ArgonEngine/: ArgonInit.cpp  ArgonInit.h  AudioSystem.cpp  AudioSystem.h  ForwardRenderer.h  Hardware.cpp  Hardware.h  OpenGLES.h  Text.cpp  Text.h  Thread.cpp  TypeInfo.h  VirtualResourceImage.cpp
common/ArgonEngine/Addons/: BorderedLabel.cpp  BorderedLabel.h
common/BulletMultiThreaded/: PlatformDefinitions.h
common/SDL3/: SDL.c
common/SDL3/events/: SDL_events.c
common/SDL3/hidapi/: SDL_hidapi.c
common/SDL3/joystick/hidapi/: SDL_hidapijoystick.c
common/SDL3/render/vulkan/: SDL_render_vulkan.c
common/SDL3/video/dummy/: SDL_nullvideo.c
common/bullet3/: CMakeLists.txt
common/libusb/: libusbi.h
ios/SDL3/audio/coreaudio/: SDL_coreaudio.m
linux/SDL3/audio/pipewire/: SDL_pipewire.h
linux/SDL3/audio/pulseaudio/: SDL_pulseaudio.c  SDL_pulseaudio.h
linux/SDL3/build_config/: SDL_build_config.h
linux/SDL3/camera/pipewire/: SDL_camera_pipewire.c
linux/SDL3/camera/v4l2/: SDL_camera_v4l2.c
linux/SDL3/core/linux/: SDL_dbus.c  SDL_fcitx.c  SDL_progressbar.h  SDL_system_theme.c
linux/SDL3/dialog/unix/: SDL_portaldialog.c  SDL_zenitydialog.c
linux/SDL3/gpu/vulkan/: SDL_gpu_vulkan.c
linux/SDL3/haptic/linux/: SDL_syshaptic.c
linux/SDL3/hidapi/linux/: hid.c
linux/SDL3/joystick/linux/: SDL_sysjoystick.c
linux/SDL3/locale/unix/: SDL_syslocale.c
linux/SDL3/misc/unix/: SDL_sysurl.c
linux/SDL3/power/linux/: SDL_syspower.c
linux/SDL3/process/posix/: SDL_posixprocess.c
linux/SDL3/thread/pthread/: SDL_systls.c
linux/SDL3/tray/unix/: SDL_tray.c
linux/SDL3/video/wayland/: SDL_waylandclipboard.c  SDL_waylandcolor.h  SDL_waylandevents_c.h  SDL_waylandvideo.c  SDL_waylandvideo.h  SDL_waylandwindow.h
linux/SDL3/video/x11/: SDL_x11pen.c  SDL_x11pen.h  SDL_x11video.h
linux/cmake/: FindDBus.cmake  defines.cmake  waylandProtocolGenerator.cmake
mac/SDL3/audio/coreaudio/: SDL_coreaudio.h
mac/SDL3/camera/coremedia/: SDL_camera_coremedia.m
mac/SDL3/dialog/cocoa/: SDL_cocoadialog.m
mac/SDL3/filesystem/cocoa/: SDL_sysfilesystem.m
mac/SDL3/filesystem/posix/: SDL_sysfsops.c
mac/SDL3/filesystem/unix/unix/: SDL_sysfilesystem.c
mac/SDL3/gpu/metal/: SDL_gpu_metal.m
mac/SDL3/haptic/darwin/: SDL_syshaptic.c
mac/SDL3/hidapi/mac/: hidapi_darwin.h
mac/SDL3/joystick/apple/: SDL_mfijoystick.m  SDL_mfijoystick_c.h
mac/SDL3/joystick/darwin/: SDL_iokitjoystick.c
mac/SDL3/locale/macos/: SDL_syslocale.m
mac/SDL3/misc/macos/: SDL_sysurl.m
mac/SDL3/process/posix/: SDL_posixprocess.c
mac/SDL3/render/metal/: SDL_render_metal.m
mac/SDL3/thread/pthread/: SDL_syssem.c  SDL_systhread.c
mac/SDL3/time/unix/: SDL_systime.c
mac/SDL3/timer/unix/: SDL_systimer.c
mac/SDL3/tray/cocoa/: SDL_tray.m
shaders/: raytracer.shd  tail.shd
win/SDL3/: SDL_build_config_windows.h
win/SDL3/audio/wasapi/: SDL_wasapi.c  SDL_wasapi.h
win/SDL3/camera/mediafoundation/: SDL_camera_mediafoundation.c
win/SDL3/dialog/windows/: SDL_windowsdialog.c
win/SDL3/filesystem/windows/: SDL_sysfilesystem.c  SDL_sysfsops.c
win/SDL3/gpu/d3d12/: SDL_gpu_d3d12.c
win/SDL3/haptic/windows/: SDL_dinputhaptic.c  SDL_windowshaptic.c  SDL_windowshaptic_c.h
win/SDL3/hidapi/windows/: hidapi_winapi.h
win/SDL3/hidapi/windows/pp_data_dump/: pp_data_dump.c
win/SDL3/io/windows/: SDL_asyncio_windows_ioring.c
win/SDL3/joystick/gdk/: SDL_gameinputjoystick.cpp
win/SDL3/joystick/windows/: SDL_dinputjoystick.c  SDL_rawinputjoystick.c  SDL_rawinputjoystick_c.h  SDL_windows_gaming_input.c  SDL_windowsjoystick.c  SDL_windowsjoystick_c.h  SDL_xinputjoystick.c
win/SDL3/locale/windows/: SDL_syslocale.c
win/SDL3/main/windows/: SDL_sysmain_runapp.c
win/SDL3/misc/windows/: SDL_sysurl.c
win/SDL3/process/windows/: SDL_windowsprocess.c
win/SDL3/render/direct3d/: SDL_render_d3d.c
win/SDL3/render/direct3d11/: SDL_render_d3d11.c
win/SDL3/render/direct3d12/: SDL_render_d3d12.c
win/SDL3/sensor/windows/: SDL_windowssensor.c
win/SDL3/thread/windows/: SDL_syscond_cv.c  SDL_sysrwlock_srw.c  SDL_systhread.c  SDL_systls.c
win/SDL3/time/windows/: SDL_systime.c
win/SDL3/tray/windows/: SDL_tray.c
